--- a/app/templates/strona.html
+++ b/app/templates/strona.html
@@ -656,7 +656,6 @@
 		top: 53.37px;
 	}
 	#Zarejestruj_ {
-		filter: drop-shadow(1.204px 1.597px 4px rgba(0, 0, 0, 0.251));
 		left: 1518.5px;
 		top: 59.503px;
 		position: absolute;
@@ -670,7 +669,7 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 18px;
-		color: rgba(255,255,255,1);
+		color: rgb(60, 41, 96);
 	}
 	#Strona_gwna________O_projekcie {
 		left: 781.5px;
@@ -3719,7 +3718,7 @@ window.application = new Application();
 			
 		<img id="n__bb" src="{{url_for('static', filename='s_image/n__bb.png')}}" >
 			
-		<img id="n__bc" src="{{url_for('static', filename='s_image/n__bc.png')}}" >
+		<img id="n__" src="{{url_for('static', filename='s_image/n__bc.png')}}" >
 			
 		<div id="Piciolinia_jest_dobrym_narzdzi">
 			Pięciolinia jest dobrym narzędziem dla szkół podstawowych oraz średnich, wykorzystując innowacyjne techniki pozwala przyswajać wiedzę w ciekawy sposób.
