--- a/app/templates/strona.html
+++ b/app/templates/strona.html
@@ -384,6 +384,15 @@
 		top: 360px;
 		overflow: visible;
 	}
+	#n__bc {
+		position: absolute;
+		width: 90px;
+		height: 90px;
+		left: 320px;
+		top: 360px;
+		overflow: visible;
+	}
+	
 	#Piciolinia_jest_dobrym_narzdzi {
 		left: 200.628px;
 		top: 551.277px;
@@ -522,7 +531,6 @@
 		line-height: 77.35576629638672px;
 		margin-top: -17.42914390563965px;
 		text-align: center;
-		font-family: Montserrat-Bold;
 		font-style: normal;
 		font-weight: normal;
 		font-size: 42.49747848510742px;
@@ -682,9 +690,8 @@
 		line-height: 21.600000381469727px;
 		margin-top: -1.8000001907348633px;
 		text-align: left;
-		font-family: Montserrat-SemiBold;
 		font-style: normal;
-		font-weight: normal;
+		font-weight: bold;
 		font-size: 18px;
 		color: rgba(60,41,96,1);
 	}
@@ -698,9 +705,8 @@
 		line-height: 21.600000381469727px;
 		margin-top: -1.8000001907348633px;
 		text-align: left;
-		font-family: Montserrat;
 		font-style: normal;
-		font-weight: normal;
+		font-weight: bold;
 		font-size: 18px;
 		color: rgba(60,41,96,1);
 	}
@@ -3790,7 +3796,7 @@ window.application = new Application();
 
 		<div id="Zarejestruj_">
 			<form type="button" role="form" method="GET"  action="{{ url_for('reg') }}">
-				<button>Zarejestruj </button>
+				<button style="background-color: transparent;">Zarejestruj </button>
 			</form>
 		
 			
