--- a/app/templates/strona.html
+++ b/app/templates/strona.html
@@ -3718,14 +3718,14 @@ window.application = new Application();
 			</rect>
 		</svg>
 		<div id="Scroll_Group_2">
-			<img id="n_" src="{{url_for('static', filename='s_image/n_.png')}}" >
+			<img id="n_" src="{{url_for('static', filename='s_image/praca.png')}}" >
 				
 		</div>
-		<img id="n__ba" src="{{url_for('static', filename='s_image/n__ba.png')}}" >
+		<img id="n__ba" src="{{url_for('static', filename='s_image/ind.png')}}" >
 			
-		<img id="n__bb" src="{{url_for('static', filename='s_image/n__bb.png')}}" >
+		<img id="n__bb" src="{{url_for('static', filename='s_image/korepetycje.png')}}" >
 			
-		<img id="n__bc" src="{{url_for('static', filename='s_image/n__bc.png')}}" >
+		<img id="n__bc" src="{{url_for('static', filename='s_image/szkola.png')}}" >
 			
 		<div id="Piciolinia_jest_dobrym_narzdzi">
 			Pięciolinia jest dobrym narzędziem dla szkół podstawowych oraz średnich, wykorzystując innowacyjne techniki pozwala przyswajać wiedzę w ciekawy sposób.
