fix button background

--- a/app/templates/strona.html
+++ b/app/templates/strona.html
@@ -3777,8 +3777,15 @@ window.application = new Application();
 		</div>
 	</div>
 	<div id="Pasek_grny">
-		
-		<img id="logo_bx" src="{{url_for('static', filename='s_image/logo_bx.png')}}">
+			<svg class="Button_bs" style="left:1323px; top:20px">
+			<linearGradient id="Button_bs" spreadMethod="pad" x1="0.5" x2="0.5" y1="1" y2="0">
+				<stop offset="0" stop-color="#7683d9" stop-opacity="1"></stop>
+				<stop offset="1" stop-color="#d8a0fe" stop-opacity="1"></stop>
+			</linearGradient>
+			<rect id="Button_bs" rx="5" ry="5" x="0" y="0" width="140.09" height="34.75">
+			</rect>
+		</svg>
+		<img id="logo_bx" src="/static/s_image/logo_bx.png">
 
 			
 		</div>
